# senegal-national-assembly

./: README.md  docs.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  initialize-environment.sh
apps/: parties_comparator.py
