[tool.poetry]
name = "Event Services"
version = "0.0.2"
description = "Descartes & Mauss Platform Services"
readme = "README.md"
authors = ["Tom Murdoch <tom.murdoch@descartesmauss.ai>"]

# Packages configs
packages = [
    {include = "README.md"},
    {include = "services/gcf_sourcing_generator",from = "bases"},
    {include = "services/gcf_scraping_run_crawler",from = "bases"},
    {include = "services/gcf_json_writer",from = "bases"},
    {include = "services/gcf_json_router",from = "bases"},
    {include = "services/storage",from = "components"},
    {include = "services/logger",from = "components"},
    {include = "services/scraper",from = "components"},
    {include = "services/serpapi",from = "components"},
    {include = "services/config",from = "components"},
    {include = "services/pubsub",from = "components"},
    {include = "services/utils",from = "components"},
    {include = "services/pipeline",from = "components"},
    {include = "services/cloudevent",from = "components"},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.31.0"
functions-framework = "^3.5.0"
cloudevents = "^1.10.1"
pandas = "^2.1.3"
smart-open = {extras = ["gcs"], version = "^6.4.0"}
google-cloud-secret-manager = "^2.16.4"
google-cloud-storage = "^2.13.0"
google-cloud-logging = "^3.8.0"
google-cloud-pubsub = "^2.18.4"
google-search-results = "^2.4.2"
google-api-python-client = "^2.109.0"
sendgrid = "^6.11.0"
pycryptodome = "^3.19.0"
tenacity = "^8.2.3"
scrapy = "^2.11.0"
uvicorn = "^0.24.0.post1"
pyopenssl = "^23.3.0"
cryptography = "^41.0.7"
pypdf2 = "^3.0.1"
beautifulsoup4 = "^4.12.2"
justext = "^3.0.0"
numpy = "^1.26.2"
flask = "^3.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
bandit = "^1.7.5"
pytest = "^7.4.3"
black = {extras = ["jupyter"], version = "^23.11.0"}
pytest-ordering = "^0.6"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
mypy = "^1.7.1"
mdformat = "^0.7.16"
validate-pyproject = "^0.13"
faker = "^19.13.0"
plantuml = "^0.3.0"
ruff = "^0.1.5"
sphinx = "^7.2.6"

[tool.poetry.group.jnb]
optional = true

[tool.poetry.group.jnb.dependencies]
ipykernel = "^6.26.0"
ipywidgets = "^8.1.1"
contourpy = "^1.2.0"
cycler = "^0.12.0"
fonttools = "^4.44.0"
kiwisolver = "^1.4.5"
matplotlib = "^3.8.1"
numpy = "^1.26.1"
packaging = "^23.2"
pyparsing = "^3.1.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"
scipy = "^1.11.3"
seaborn = "^0.13.0"
six = "^1.16.0"
scikit-learn = "^1.3.2"
ipython = "^8.17.2"
nbstripout = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv"
filterwarnings = [
    "ignore::DeprecationWarning:",
]
pythonpath = [
    "components",
    "bases",
]
testpaths = [
  "test/"
]

## coverage

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py"
]

[tool.coverage.report]
skip_empty = true
fail_under = 100
precision = 2
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

## black

[tool.black]
target-version = ['py310']
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | venv
  | \.venv
  | _build
  | build
  | dist
  | \.devcontainer
)/
'''

## ruff

[tool.ruff]
line-length = 99
target-version = "py310"
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E203","E501", "PLR0913"] # Black takes care of line-too-long | REMOVE "PLR0913"
exclude = [".devcontainer"]

[tool.ruff.lint.pylint]
max-statements = 75
max-branches = 13

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = false

## mypy

[tool.mypy]
python_version = "3.10"
mypy_path = ["components", "bases"]
namespace_packages = "True"
explicit_package_bases = "True"

[tool.mypy-functions_framework]
ignore_missing_imports = "True"